<?xml version="1.0" encoding="utf-8"?>
<com.malaab.ya.action.actionyamalaab.custom.FlingableNestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nsc_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/xlight_gray"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_15"
        android:orientation="vertical">

        <TextView
            style="@style/Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:padding="@dimen/padding_5"
            android:text="@string/title_age_select"
            android:textSize="@dimen/txt_subheading" />

        <LinearLayout
            android:id="@+id/ln_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_5"
                android:text="@string/age"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/txt_subheading" />

            <android.support.v7.widget.AppCompatImageButton
                android:layout_width="@dimen/icon_size_small"
                android:layout_height="@dimen/icon_size_small"
                android:background="@null"
                android:clickable="false"
                android:contentDescription="@string/content_description"
                android:padding="@dimen/padding_3"
                android:scaleType="fitCenter"
                android:tint="@color/colorPrimary"
                app:srcCompat="@drawable/icon_arrow_down" />

        </LinearLayout>


        <Button
            android:id="@+id/btn_search"
            android:layout_width="@dimen/btn_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin_25"
            android:background="@drawable/btn_rounded_green"
            android:padding="@dimen/padding_10"
            android:text="@string/title_search"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_title" />

    </LinearLayout>
</com.malaab.ya.action.actionyamalaab.custom.FlingableNestedScrollView>

