<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:clipChildren="true"
    android:clipToPadding="true"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_10">

        <TextView
            android:id="@+id/txt_price"
            style="@style/Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_rounded_price_tag"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="@dimen/padding_5"
            android:text="@string/title_price"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_subheading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/txt_name"
            style="@style/Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:layout_marginEnd="@dimen/margin_5"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="1"
            android:padding="@dimen/padding_2"
            android:text="@string/name"
            android:textColor="@color/black_effective"
            android:textSize="@dimen/txt_title"
            app:layout_constraintEnd_toStartOf="@id/txt_price"
            app:layout_constraintStart_toStartOf="@+id/txt_address"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_5"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="2"
            android:padding="@dimen/padding_2"
            android:text="@string/address"
            android:textColor="@color/black_effective"
            android:textSize="@dimen/txt_default"
            app:layout_constraintEnd_toEndOf="@id/txt_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_name" />


        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/icon_calendar"
            android:layout_width="@dimen/icon_size_small"
            android:layout_height="@dimen/icon_size_small"
            android:layout_marginStart="@dimen/margin_5"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@null"
            android:gravity="start"
            android:padding="@dimen/padding_2"
            android:scaleType="fitCenter"
            android:tint="@color/green_apple"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_address"
            app:srcCompat="@drawable/icon_calendar" />

        <TextView
            android:id="@+id/txt_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_5"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="1"
            android:padding="@dimen/padding_2"
            android:text="@string/date"
            android:textColor="@color/black_effective"
            android:textSize="@dimen/txt_default"
            app:layout_constraintBottom_toBottomOf="@+id/icon_calendar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/icon_calendar"
            app:layout_constraintTop_toTopOf="@+id/icon_calendar" />


        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/icon_time"
            android:layout_width="@dimen/icon_size_small"
            android:layout_height="@dimen/icon_size_small"
            android:layout_marginStart="@dimen/margin_5"
            android:layout_marginTop="@dimen/margin_5"
            android:background="@null"
            android:padding="@dimen/padding_2"
            android:scaleType="fitCenter"
            android:tint="@color/green_apple"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon_calendar"
            app:srcCompat="@drawable/icon_clock" />

        <TextView
            android:id="@+id/txt_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_5"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="@dimen/padding_2"
            android:text="@string/time"
            android:textColor="@color/black_effective"
            android:textSize="@dimen/txt_default"
            app:layout_constraintBottom_toBottomOf="@+id/icon_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/icon_time"
            app:layout_constraintTop_toTopOf="@+id/icon_time" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
